syntax="proto3";

package auth;

option go_package = "internal/api/auth";

import "google/api/annotations.proto";

service AuthService{
  rpc Register(AuthRequest) returns (RegisterResponse){
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }
  rpc Login(AuthRequest) returns (LoginResponse){
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
}

message AuthRequest{
  string login = 1;
  string password = 2;
}

message TokenRequest{
  string token = 1;
}

message RegisterResponse{
  bool success = 1;
}

message LoginResponse{
  string refresh = 1;
  string access = 2;
}